fix z-index for progress bar so it doesn't show on top of modals

--- a/webui/css/main.css
+++ b/webui/css/main.css
@@ -4,6 +4,7 @@ body {
 
 #loading-bar .bar {
     top: 55px;
+    z-index: 1000;
 }
 
 @-webkit-keyframes rotation {
